# shmembench

./: .gitignore  BUILD.sh  CMakeLists.txt  COMPILE.sh  Dockerfile  Makefile  README.md  RUN.sh  TODO.txt  compare.py  sos_1.4_results.txt  sos_1.5_results.txt
py/: main.py
rs/: Cargo.toml
rs/src/: main.rs
scripts/: BUILD.sh  RUN.sh  build.sh  format.sh  test.sh
src/: CMakeLists.txt  main.c  main.cpp  parse_opts.c  shmembench.c  shmembench.cpp
src/benchmarks/: CMakeLists.txt
src/benchmarks/atomics/: CMakeLists.txt  shmem_atomic_add.c  shmem_atomic_add.h  shmem_atomic_compare_swap.c  shmem_atomic_compare_swap.h  shmem_atomic_fetch.c  shmem_atomic_fetch.h  shmem_atomic_fetch_nbi.c  shmem_atomic_fetch_nbi.h  shmem_atomic_inc.c  shmem_atomic_inc.h  shmem_atomic_set.c  shmem_atomic_set.h  shmem_atomic_swap.c  shmem_atomic_swap.h
src/benchmarks/collectives/: CMakeLists.txt  shmem_alltoall.c  shmem_alltoall.h  shmem_alltoallmem.c  shmem_alltoallmem.h  shmem_alltoalls.c  shmem_alltoalls.h  shmem_alltoallsmem.c  shmem_alltoallsmem.h  shmem_barrier_all.c  shmem_barrier_all.h  shmem_broadcast.c  shmem_broadcast.h  shmem_broadcastmem.c  shmem_broadcastmem.h  shmem_collect.c  shmem_collect.h  shmem_collectmem.c  shmem_collectmem.h  shmem_fcollect.c  shmem_fcollect.h  shmem_fcollectmem.c  shmem_fcollectmem.h
src/benchmarks/rma/: CMakeLists.txt  shmem_get.c  shmem_get.h  shmem_get_nbi.c  shmem_get_nbi.h  shmem_getmem.c  shmem_getmem.h  shmem_getmem_nbi.c  shmem_getmem_nbi.h  shmem_iget.c  shmem_iget.h  shmem_iput.c  shmem_iput.h  shmem_put.c  shmem_put.h  shmem_put_nbi.c  shmem_put_nbi.h  shmem_putmem.c  shmem_putmem.h  shmem_putmem_nbi.c  shmem_putmem_nbi.h
src/include/: benchmarks.h  datatype_config.h  parse_opts.h  shmembench.h
src/performance/: CMakeLists.txt
src/performance/rma/: CMakeLists.txt
test/: compile.sh  shmem_get_version.c  version
tmp/: TEST.sh
